k8s/overlays/local/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multimodal-fashion-recommender
  namespace: mfs
spec:
  rules:
    - host: <EC2_PUBLIC_IP>.nip.io
